// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NEW and EDIT <Checksums /> should handle all types selected 1`] = `
<div
  class="MuiFormGroup-root"
>
  <div
    class="MuiBox-root MuiBox-root-12"
  >
    <hr
      class="MuiDivider-root"
    />
  </div>
  <h6
    class="MuiTypography-root MuiTypography-h6 MuiTypography-alignLeft"
  >
    Checksums
  </h6>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-alignLeft"
  >
    Each single-blob DRS Object must report one or more checksums, recording the digest algorithm and value of the DRS Object bytes. The following list displays the recorded digest algorithms and corresponding values for this DRS Object.
  </p>
  <div
    class="MuiFormGroup-root MuiFormGroup-row"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            align="left"
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumType0"
              id="ChecksumType0-label"
            >
              Type
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="ChecksumType0-label ChecksumType0"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumType0"
                role="button"
                tabindex="0"
              >
                md5
              </div>
              <input
                aria-describedby="ChecksumType0-helper-text"
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="type"
                tabindex="-1"
                value="md5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                >
                  <span>
                    Type
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumType0-helper-text"
            >
              Hashing algorithm used to generate the checksum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
              for="ChecksumValue0"
              id="ChecksumValue0-label"
            >
              Checksum
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="ChecksumValue0-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumValue0"
                name="checksum"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-15"
                >
                  <span>
                    Checksum
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained"
              id="ChecksumValue0-helper-text"
            >
              Checksum digest value.
            </p>
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
        >
          <button
            aria-label="remove-item-button"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            data-testid="remove-item-button-tooltip"
            tabindex="0"
            title="Remove this checksum."
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiFormGroup-root MuiFormGroup-row"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            align="left"
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumType1"
              id="ChecksumType1-label"
            >
              Type
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="ChecksumType1-label ChecksumType1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumType1"
                role="button"
                tabindex="0"
              >
                sha1
              </div>
              <input
                aria-describedby="ChecksumType1-helper-text"
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="type"
                tabindex="-1"
                value="sha1"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                >
                  <span>
                    Type
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumType1-helper-text"
            >
              Hashing algorithm used to generate the checksum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumValue1"
              id="ChecksumValue1-label"
            >
              Checksum
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="ChecksumValue1-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumValue1"
                name="checksum"
                type="text"
                value="456"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                >
                  <span>
                    Checksum
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumValue1-helper-text"
            >
              Checksum digest value.
            </p>
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
        >
          <button
            aria-label="remove-item-button"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            data-testid="remove-item-button-tooltip"
            tabindex="0"
            title="Remove this checksum."
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiFormGroup-root MuiFormGroup-row"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            align="left"
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumType2"
              id="ChecksumType2-label"
            >
              Type
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="ChecksumType2-label ChecksumType2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumType2"
                role="button"
                tabindex="0"
              >
                sha256
              </div>
              <input
                aria-describedby="ChecksumType2-helper-text"
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="type"
                tabindex="-1"
                value="sha256"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                >
                  <span>
                    Type
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumType2-helper-text"
            >
              Hashing algorithm used to generate the checksum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumValue2"
              id="ChecksumValue2-label"
            >
              Checksum
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="ChecksumValue2-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumValue2"
                name="checksum"
                type="text"
                value="789"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-15 PrivateNotchedOutline-legendNotched-16"
                >
                  <span>
                    Checksum
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumValue2-helper-text"
            >
              Checksum digest value.
            </p>
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
        >
          <button
            aria-label="remove-item-button"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            data-testid="remove-item-button-tooltip"
            tabindex="0"
            title="Remove this checksum."
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`NEW and EDIT <Checksums /> should handle no types selected 1`] = `
<div
  class="MuiFormGroup-root"
>
  <div
    class="MuiBox-root MuiBox-root-11"
  >
    <hr
      class="MuiDivider-root"
    />
  </div>
  <h6
    class="MuiTypography-root MuiTypography-h6 MuiTypography-alignLeft"
  >
    Checksums
  </h6>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-alignLeft"
  >
    Each single-blob DRS Object must report one or more checksums, recording the digest algorithm and value of the DRS Object bytes. The following list displays the recorded digest algorithms and corresponding values for this DRS Object.
  </p>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <span
          class=""
          data-testid="add-item-button-tooltip"
          title="Add checksum."
        >
          <button
            aria-label="add-item-button"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`NEW and EDIT <Checksums /> should handle some types selected 1`] = `
<div
  class="MuiFormGroup-root"
>
  <div
    class="MuiBox-root MuiBox-root-17"
  >
    <hr
      class="MuiDivider-root"
    />
  </div>
  <h6
    class="MuiTypography-root MuiTypography-h6 MuiTypography-alignLeft"
  >
    Checksums
  </h6>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-alignLeft"
  >
    Each single-blob DRS Object must report one or more checksums, recording the digest algorithm and value of the DRS Object bytes. The following list displays the recorded digest algorithms and corresponding values for this DRS Object.
  </p>
  <div
    class="MuiFormGroup-root MuiFormGroup-row"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            align="left"
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumType0"
              id="ChecksumType0-label"
            >
              Type
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="ChecksumType0-label ChecksumType0"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumType0"
                role="button"
                tabindex="0"
              >
                md5
              </div>
              <input
                aria-describedby="ChecksumType0-helper-text"
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="type"
                tabindex="-1"
                value="md5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-18 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-20 PrivateNotchedOutline-legendNotched-21"
                >
                  <span>
                    Type
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumType0-helper-text"
            >
              Hashing algorithm used to generate the checksum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumValue0"
              id="ChecksumValue0-label"
            >
              Checksum
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="ChecksumValue0-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumValue0"
                name="checksum"
                type="text"
                value="123"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-18 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-20 PrivateNotchedOutline-legendNotched-21"
                >
                  <span>
                    Checksum
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumValue0-helper-text"
            >
              Checksum digest value.
            </p>
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
        >
          <button
            aria-label="remove-item-button"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            data-testid="remove-item-button-tooltip"
            tabindex="0"
            title="Remove this checksum."
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiFormGroup-root MuiFormGroup-row"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            align="left"
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumType1"
              id="ChecksumType1-label"
            >
              Type
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="ChecksumType1-label ChecksumType1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumType1"
                role="button"
                tabindex="0"
              >
                sha256
              </div>
              <input
                aria-describedby="ChecksumType1-helper-text"
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="type"
                tabindex="-1"
                value="sha256"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-18 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-20 PrivateNotchedOutline-legendNotched-21"
                >
                  <span>
                    Type
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumType1-helper-text"
            >
              Hashing algorithm used to generate the checksum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumValue1"
              id="ChecksumValue1-label"
            >
              Checksum
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="ChecksumValue1-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumValue1"
                name="checksum"
                type="text"
                value="789"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-18 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-20 PrivateNotchedOutline-legendNotched-21"
                >
                  <span>
                    Checksum
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumValue1-helper-text"
            >
              Checksum digest value.
            </p>
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
        >
          <button
            aria-label="remove-item-button"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            data-testid="remove-item-button-tooltip"
            tabindex="0"
            title="Remove this checksum."
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <span
          class=""
          data-testid="add-item-button-tooltip"
          title="Add checksum."
        >
          <button
            aria-label="add-item-button"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SHOW <Checksums /> should handle all types selected 1`] = `
<div
  class="MuiFormGroup-root"
>
  <div
    class="MuiBox-root MuiBox-root-1"
  >
    <hr
      class="MuiDivider-root"
    />
  </div>
  <h6
    class="MuiTypography-root MuiTypography-h6 MuiTypography-alignLeft"
  >
    Checksums
  </h6>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-alignLeft"
  >
    Each single-blob DRS Object must report one or more checksums, recording the digest algorithm and value of the DRS Object bytes. The following list displays the recorded digest algorithms and corresponding values for this DRS Object.
  </p>
  <div
    class="MuiFormGroup-root MuiFormGroup-row"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            align="left"
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumType0"
              id="ChecksumType0-label"
            >
              Type
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="ChecksumType0-label ChecksumType0"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumType0"
                role="button"
                tabindex="0"
              >
                md5
              </div>
              <input
                aria-describedby="ChecksumType0-helper-text"
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="type"
                tabindex="-1"
                value="md5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-4 PrivateNotchedOutline-legendNotched-5"
                >
                  <span>
                    Type
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumType0-helper-text"
            >
              Hashing algorithm used to generate the checksum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
              for="ChecksumValue0"
              id="ChecksumValue0-label"
            >
              Checksum
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="ChecksumValue0-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumValue0"
                name="checksum"
                readonly=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-4"
                >
                  <span>
                    Checksum
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained"
              id="ChecksumValue0-helper-text"
            >
              Checksum digest value.
            </p>
          </div>
        </div>
      </div>
      <div />
    </div>
  </div>
  <div
    class="MuiFormGroup-root MuiFormGroup-row"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            align="left"
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumType1"
              id="ChecksumType1-label"
            >
              Type
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="ChecksumType1-label ChecksumType1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumType1"
                role="button"
                tabindex="0"
              >
                sha1
              </div>
              <input
                aria-describedby="ChecksumType1-helper-text"
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="type"
                tabindex="-1"
                value="sha1"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-4 PrivateNotchedOutline-legendNotched-5"
                >
                  <span>
                    Type
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumType1-helper-text"
            >
              Hashing algorithm used to generate the checksum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumValue1"
              id="ChecksumValue1-label"
            >
              Checksum
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="ChecksumValue1-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumValue1"
                name="checksum"
                readonly=""
                type="text"
                value="456"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-4 PrivateNotchedOutline-legendNotched-5"
                >
                  <span>
                    Checksum
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumValue1-helper-text"
            >
              Checksum digest value.
            </p>
          </div>
        </div>
      </div>
      <div />
    </div>
  </div>
  <div
    class="MuiFormGroup-root MuiFormGroup-row"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            align="left"
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumType2"
              id="ChecksumType2-label"
            >
              Type
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="ChecksumType2-label ChecksumType2"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumType2"
                role="button"
                tabindex="0"
              >
                sha256
              </div>
              <input
                aria-describedby="ChecksumType2-helper-text"
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="type"
                tabindex="-1"
                value="sha256"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-4 PrivateNotchedOutline-legendNotched-5"
                >
                  <span>
                    Type
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumType2-helper-text"
            >
              Hashing algorithm used to generate the checksum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumValue2"
              id="ChecksumValue2-label"
            >
              Checksum
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="ChecksumValue2-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumValue2"
                name="checksum"
                readonly=""
                type="text"
                value="789"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-4 PrivateNotchedOutline-legendNotched-5"
                >
                  <span>
                    Checksum
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumValue2-helper-text"
            >
              Checksum digest value.
            </p>
          </div>
        </div>
      </div>
      <div />
    </div>
  </div>
  <div />
</div>
`;

exports[`SHOW <Checksums /> should handle some types selected 1`] = `
<div
  class="MuiFormGroup-root"
>
  <div
    class="MuiBox-root MuiBox-root-6"
  >
    <hr
      class="MuiDivider-root"
    />
  </div>
  <h6
    class="MuiTypography-root MuiTypography-h6 MuiTypography-alignLeft"
  >
    Checksums
  </h6>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-alignLeft"
  >
    Each single-blob DRS Object must report one or more checksums, recording the digest algorithm and value of the DRS Object bytes. The following list displays the recorded digest algorithms and corresponding values for this DRS Object.
  </p>
  <div
    class="MuiFormGroup-root MuiFormGroup-row"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            align="left"
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumType0"
              id="ChecksumType0-label"
            >
              Type
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="ChecksumType0-label ChecksumType0"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumType0"
                role="button"
                tabindex="0"
              >
                md5
              </div>
              <input
                aria-describedby="ChecksumType0-helper-text"
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="type"
                tabindex="-1"
                value="md5"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-7 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-9 PrivateNotchedOutline-legendNotched-10"
                >
                  <span>
                    Type
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumType0-helper-text"
            >
              Hashing algorithm used to generate the checksum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumValue0"
              id="ChecksumValue0-label"
            >
              Checksum
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="ChecksumValue0-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumValue0"
                name="checksum"
                readonly=""
                type="text"
                value="123"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-7 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-9 PrivateNotchedOutline-legendNotched-10"
                >
                  <span>
                    Checksum
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumValue0-helper-text"
            >
              Checksum digest value.
            </p>
          </div>
        </div>
      </div>
      <div />
    </div>
  </div>
  <div
    class="MuiFormGroup-root MuiFormGroup-row"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            align="left"
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumType1"
              id="ChecksumType1-label"
            >
              Type
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="ChecksumType1-label ChecksumType1"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumType1"
                role="button"
                tabindex="0"
              >
                sha256
              </div>
              <input
                aria-describedby="ChecksumType1-helper-text"
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                name="type"
                tabindex="-1"
                value="sha256"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-7 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-9 PrivateNotchedOutline-legendNotched-10"
                >
                  <span>
                    Type
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumType1-helper-text"
            >
              Hashing algorithm used to generate the checksum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
              data-shrink="true"
              for="ChecksumValue1"
              id="ChecksumValue1-label"
            >
              Checksum
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="ChecksumValue1-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input"
                id="ChecksumValue1"
                name="checksum"
                readonly=""
                type="text"
                value="789"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-7 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-9 PrivateNotchedOutline-legendNotched-10"
                >
                  <span>
                    Checksum
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
              id="ChecksumValue1-helper-text"
            >
              Checksum digest value.
            </p>
          </div>
        </div>
      </div>
      <div />
    </div>
  </div>
  <div />
</div>
`;
